--- a/qBittorrent.conf
+++ b/qBittorrent.conf
@@ -2,6 +2,16 @@
 enabled=false
 program=
 
+[BitTorrent]
+Session\CreateTorrentSubfolder=true
+Session\DisableAutoTMMByDefault=true
+Session\DisableAutoTMMTriggers\CategoryChanged=false
+Session\DisableAutoTMMTriggers\CategorySavePathChanged=true
+Session\DisableAutoTMMTriggers\DefaultSavePathChanged=true
+
+[Core]
+AutoDeleteAddedTorrentFile=Never
+
 [LegalNotice]
 Accepted=true
 
@@ -16,10 +26,8 @@ Connection\GlobalDLLimitAlt=10
 Connection\GlobalUPLimitAlt=10
 Connection\PortRangeMin=54321
 Downloads\PreAllocation=false
-Downloads\SavePath=/downloads/
 Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\0)
-Downloads\TempPath=/tmp/
-Downloads\TempPathEnabled=false
+Downloads\StartInPause=false
 DynDNS\DomainName=changeme.dyndns.org
 DynDNS\Enabled=false
 DynDNS\Password=
@@ -30,16 +38,22 @@ General\UseRandomPort=false
 MailNotification\email=
 MailNotification\enabled=false
 MailNotification\password=
-MailNotification\req_auth=false
+MailNotification\req_auth=true
 MailNotification\req_ssl=false
+MailNotification\sender=qBittorrent_notification@example.com
 MailNotification\smtp_server=smtp.changeme.com
 MailNotification\username=
 WebUI\Address=*
+WebUI\AlternativeUIEnabled=false
 WebUI\AuthSubnetWhitelist=@Invalid()
 WebUI\AuthSubnetWhitelistEnabled=false
+WebUI\CSRFProtection=true
+WebUI\ClickjackingProtection=true
 WebUI\HTTPS\Enabled=false
+WebUI\HostHeaderValidation=true
 WebUI\LocalHostAuth=true
 WebUI\Port=56789
+WebUI\RootFolder=
 WebUI\ServerDomains=*
 WebUI\UseUPnP=true
 WebUI\Username=admin
