modified:   qBittorrent.conf

--- a/qBittorrent.conf
+++ b/qBittorrent.conf
@@ -9,9 +9,11 @@ Accepted=true
 Cookies=@Invalid()
 
 [Preferences]
+Advanced\AnnounceToAllTrackers=true
 Bittorrent\AddTrackers=false
 Bittorrent\MaxRatioAction=0
 Bittorrent\PeX=true
+Connection\UPnP=false
 Connection\GlobalDLLimitAlt=10
 Connection\GlobalUPLimitAlt=10
 Connection\PortRangeMin=54321
