--- a/qBittorrent.conf
+++ b/qBittorrent.conf
@@ -19,6 +19,7 @@ Accepted=true
 Cookies=@Invalid()
 
 [Preferences]
+Advanced\AnnounceToAllTrackers=true
 Bittorrent\AddTrackers=false
 Bittorrent\MaxRatioAction=0
 Bittorrent\PeX=true
